fix: z-index of function dropdown popover
newrelic#28

--- a/nerdlets/root/styles.scss
+++ b/nerdlets/root/styles.scss
@@ -379,3 +379,7 @@
 [class*=TableHeaderCell-title] {
   border-bottom: none;
 }
+
+.react-select__menu {
+  z-index: 100;
+}
